# VitaMesh.02

./: .gitignore  README.md
.kiro/specs/vitalswarm-v6-upgrade/: .config.kiro  requirements.md
dashboard/: index.html  swarm_ws.js
firmware/: drone_relay.ino  rover_responder.ino  wearable_vitals.ino
foxmq.d/: address-book.toml  key_0.pem
vertex-integration/: Cargo.toml  build.rs  build_bridge.ps1  run_bridge.ps1  vertex_bridge.py
vertex-integration/src/: lib.rs  main.rs
